fixes to img display + menu z-index

--- a/ui/components/layout/header/MainMenu/MainMenu.module.scss
+++ b/ui/components/layout/header/MainMenu/MainMenu.module.scss
@@ -30,7 +30,7 @@
     background: var(--header-background-high-contrast-colour);
     font-size: 2em;
     line-height: 2;
-    
+    z-index: 1;
 }
 .mainMenuModalContent{
     display: inline;
