--- a/ui/components/show/showCards/ImgContainer/CardImgContainer.module.scss
+++ b/ui/components/show/showCards/ImgContainer/CardImgContainer.module.scss
@@ -40,3 +40,7 @@
         box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.75); 
     }       
 }
+
+.cardImgFullWidth{
+    width: 100%;
+}
